--- a/404.html
+++ b/404.html
@@ -15,6 +15,7 @@
          (l.search ? '&' + l.search.slice(1).replace(/&/g, '~and~') : '') +
          l.hash
       );
+      console.log('direct link:', l);
 
    </script>
 </head>
