--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/logo.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Nguyễn Minh Luân</title>
-
-  <script type="text/javascript">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta property='og:image' content='./thumbnail-share.png' />
+  <meta property="og:title" content="Nguyễn Minh Luân" />
+  <meta property="og:description"
+    content="Luan Nguyen is a Frontend Developer who builds accessible, comprehensive digital products and experiences for the web." />
+  <script>
     (function (l) {
       if (l.search[1] === '/') {
         var decoded = l.search.slice(1).split('&').map(function (s) {
